@@ -45,6 +45,7 @@
       <input type="hidden" name="jsUnitVersion">
       <input type="hidden" name="time">
       <input type="hidden" name="url">
+      <input type="hidden" name="cacheBuster">
       <select size="5" name="testCases" multiple></select>
     </form>
     <script language="javascript" type="text/javascript">
@@ -53,14 +54,14 @@
 	    	document.resultsForm.userAgent.value=userAgent;
 	    	document.resultsForm.jsUnitVersion.value=jsUnitVersion;
             document.resultsForm.url.value = baseURL;
-		}
+            document.resultsForm.cacheBuster.value = new Date().getTime();
+        }
 		function submitResults() {
 		  var testCasesField = document.resultsForm.testCases;
 		  for (var i=0; i<testCasesField.length; i++) {
 			  testCasesField[i].selected=true;
 		  }
-		  document.resultsForm.submit();
-
+          document.resultsForm.submit();
 		}
     </script>
   </body>
