@@ -1,9 +1,17 @@
 Required for next release:
   FEATURES:
+    - ability to pass in "-temporary true" to the server, which means no config printout and no background version checker
+    - change to use webwork taglib for jsps; remove all java
+    - Background thread to update latest version?
+    - admin console to change and save configuration (password protected?)
+    - how do the logs work with multiple browser runs given an id?
+    - browser id's - give each browser an id, and add the ability to pass a browser id to the runner servlet
+
     - jsunit source div innerHTML
+    - auto-upgrade check in browser using AJAX
+
     - pull in pivotal's new assertion functions
     - make ajaxunit.js from pivotal's ajax.js and get don's and zen's input too
-    - auto-upgrade check in browser?  Background thread to update latest version?
   BUGS:
     - look at all jsunit emails to see what feature requests/bugs there are to do
     - SourceForge bugs
